--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <img src="aein.jpg" alt="mylove">
         </div>
         <div class="content">
-            <h3 style="color:violet;">Dear::My  Girl</h3>   
-                    <p style="color:indigo;">I miss you my original!
-The one&only#Eloise😞<br>
-At that time,I made many false!
-Now I know my fault!
+            <h3 style="color:violet;">Dear::My  Love</h3>   
+                    <p style="color:indigo;">I wanna apologize:(!
+Maaf karena tadi ngambek gajelas😞<br>
+Tiba-tiba bete
+Padahal aku tau kamu bercanda
 So I apologize from here;<br>
-Don't forgive me!!
-I deserve with this punishment (😞)
-Be happy my original 
-Again I'm BEGGING   <br>
+Semoga kedepannya aku bisa mengontrol
+Aku ga bermaksud untuk ngekang kamu
+Semoga aku bisa dimaafkan
+I just don't wanna lose you sayang   <br>
 <p2 style="color:red;">#1Y7M1D</p2></p>
 
                 
